--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,44 +1,41 @@
-name: Android Build
+name: Android CI
 
 on:
   push:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout source code dari repository
-    - name: Checkout code
+    - name: Checkout source code
       uses: actions/checkout@v3
 
-    # 2. Setup Java JDK 17
-    - name: Setup JDK
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: '17'
+        java-version: 17
 
-    # 3. Setup Android SDK
-    - name: Setup Android SDK
+    - name: Set up Android SDK
       uses: android-actions/setup-android@v2
       with:
         api-level: 33
         build-tools: 33.0.2
 
-    # 4. Build APK
-    - name: Build APK
-      run: |
-        cd voicechat # Ganti dengan nama direktori proyek kamu jika berbeda
-        chmod +x ./gradlew # Pastikan gradlew memiliki izin eksekusi
-        ./gradlew assembleDebug
+    - name: Grant execute permission for Gradle wrapper
+      run: chmod +x ./gradlew
 
-    # 5. Upload APK sebagai artifact
-    - name: Upload APK
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v3
       with:
-        name: app-debug.apk
-        path: voicechat/app/build/outputs/apk/debug/app-debug.apk # Ganti sesuai struktur proyek kamu
+        name: app-debug-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
