--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     // Tambahkan dependensi lain yang diperlukan
+    implementation 'com.google.android.material:material:1.4.0' // Sesuaikan versi jika diperlukan
 }
