--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0' // Sesuaikan versi jika diperlukan
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     // Tambahkan dependensi lainnya sesuai kebutuhan
+    implementation 'com.google.android.gms:play-services-ads:22.0.0' // Versi terbaru
 }
