--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     // Tambahkan dependensi lainnya sesuai kebutuhan
     implementation 'com.google.android.gms:play-services-ads:22.4.0' // Versi terbaru
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.mojang:authlib:2.1.0'
 }
