--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,6 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
-        maven { url "https://libraries.minecraft.net/" }
+        maven { url "https://repo1.maven.org/maven2/" }
     }
 }
